Changes to be committed: 	modified:   .idea/misc.xml 	modified:   app/app-release.apk 	modified:   app/build.gradle 	modified:   app/src/main/java/com/digitalwonders/ilhan/spherify/AppConstant.java 	modified:   app/src/main/java/com/digitalwonders/ilhan/spherify/AppFunctions.java 	modified:   app/src/main/java/com/digitalwonders/ilhan/spherify/DisplayActivity.java 	modified:   app/src/main/java/com/digitalwonders/ilhan/spherify/EditActivity.java 	modified:   app/src/main/java/com/digitalwonders/ilhan/spherify/GalleryActivity.java 	modified:   app/src/main/java/com/digitalwonders/ilhan/spherify/HelpActivity.java 	modified:   app/src/main/java/com/digitalwonders/ilhan/spherify/Spherify.java 	modified:   app/src/main/java/com/digitalwonders/ilhan/spherify/SpherifyActivity.java 	modified:   app/src/main/res/layout-v21/activity_display.xml 	modified:   app/src/main/res/layout/activity_display.xml 	modified:   app/src/main/res/layout/activity_help.xml 	modified:   app/src/main/res/values-tr/strings.xml 	modified:   app/src/main/res/values/strings.xml 	modified:   libraries/opencv/build/generated/source/aidl/debug/org/opencv/engine/OpenCVEngineInterface.java 	modified:   libraries/opencv/build/intermediates/bundles/debug/classes.jar 	modified:   libraries/opencv/build/intermediates/bundles/release/classes.jar 	modified:   libraries/opencv/build/intermediates/incremental/aidl/debug/dependency.store 	modified:   libraries/opencv/build/intermediates/incremental/mergeAssets/androidTest/debug/merger.xml 	modified:   libraries/opencv/build/intermediates/incremental/mergeAssets/debug/merger.xml 	modified:   libraries/opencv/build/intermediates/incremental/mergeResources/androidTest/debug/merger.xml 	modified:   libraries/opencv/build/intermediates/incremental/packageResources/debug/merger.xml 	deleted:    libraries/opencv/build/intermediates/manifests/tmp/manifestMerger6511433638924833029.xml 	modified:   libraries/opencv/build/intermediates/resources/resources-debug-androidTest.

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -6,6 +6,7 @@
     <string name="menu_item_delete">Sil</string>
     <string name="menu_item_share">Paylaş</string>
     <string name="menu_item_new">Yeni Yarat</string>
+    <string name="menu_item_rotate">Çevir</string>
     <string name="menu_item_help">Yardım</string>
 
     <string name="share_caption">Spherify\'la yaratılmıştır! #spherify</string>
@@ -19,7 +20,8 @@
     <string name="edit_activity_tip2">İpucu 2: Yumuşatma ayarıyla sol ve sağ kenarlar arasında yumuşak bir geçiş sağlayabilirsiniz.\n</string>
 
     <string name="display_activity_checkBox">Kenarları kes</string>
-    <string name="display_activity_tip1">\İpucu: Görüntüyü iki parmağınızla döndürebilirsiniz.\n</string>
+    <string name="display_activity_tip1">\nİpucu 1: Görüntüyü iki parmağınızla döndürebilirsiniz.</string>
+    <string name="display_activity_tip2">İpucu 2: #Spherify hashtagi ile yapacağınız paylaşımlar Spherify hesabında yayınlanacaktır.</string>
 
     <string name="help_activity_html">
         \n\n\n
